--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -7,7 +7,6 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
 }
 
 .box-container {
@@ -83,4 +82,9 @@ button {
     background-color: var(--secondaryBG);
     color: white;
     border: none;
+}
+
+.forgotpassword {
+    margin-top: 20px;
+    text-align: center;
 }
