--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,6 +10,30 @@
     position: absolute;
 }
 
+.dropdown {
+    position: absolute; /* positions dropdown relative to .search-container */
+    top: 100%;          /* sit just below the input */
+    left: 0;
+    width: 100%;        /* match the width of the container/input */
+    margin: 0;
+    padding: 0;
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    list-style-type: none;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    z-index: 999;       /* ensure it appears on top of other elements */
+}
+
+.dropdown li {
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.dropdown li:hover {
+    background-color: #f0f0f0;
+}
+
 .main-option-container {
     display: flex;
     justify-content: space-around;
