--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -34,6 +34,8 @@ p {
 /* Remove unnecessary spaces around text wrapped in Link */
 .inline-link {
     display: contents;
+    color: var(--secondaryBG);
+    font-weight: 600;
 }
 
 .name-container {
