--- a/src/styles/appointments.css
+++ b/src/styles/appointments.css
@@ -11,6 +11,7 @@ h3 {
     border-radius: 1rem;
     width: 80vw;
     margin: 0 auto;
+    overflow-x: auto;
 }
 
 .appointment-feature {
@@ -24,6 +25,7 @@ h3 {
 .appointment-feature-details-table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: auto;
 }
 
 .appointment-feature-details-table th:first-child,
@@ -40,6 +42,7 @@ h3 {
 .appointment-feature-details-table td {
     padding: 10px;
     text-align: center;
+    white-space: nowrap;
 }
 
 .appointment-feature-image {
