--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -63,10 +63,6 @@ p {
     transition: border-color 0.2s;
 }
 
-.input-field::placeholder {
-    color: transparent;
-}
-
 .input-field:focus {
     border-bottom-color: var(--secondaryBG);
     outline: none;
@@ -95,8 +91,8 @@ p {
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-  width: 1rem;
-  height: 1rem;
+  width: 20px;
+  height: auto;
   cursor: pointer;
 }
 
