Home page and button styling improvements

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -115,6 +115,11 @@ button {
     border: none;
 }
 
+button:hover {
+    background-color: #9bb4cece;
+    cursor: pointer;
+}
+
 .forgotpassword {
     margin-top: 20px;
     text-align: center;
