--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -51,6 +51,15 @@
     max-width: 300px;
     border-radius: 0.75rem;
     margin: 10px;
+    animation: none;
+}
+
+.main-option-feature:hover {
+    animation: raise 0.3s ease forwards;
+}
+
+.main-option-feature:not(:hover) {
+    animation: lower 0.3s ease forwards;
 }
 
 .feature-icon {
@@ -65,6 +74,29 @@
 
 #search-bar-label {
     color: darkgray;
+}
+
+@keyframes raise {
+    from {
+        transform: translateY(0);
+        box-shadow: none;
+    }
+    to {
+        transform: translateY(-5px);
+        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+    }
+}
+
+@keyframes lower {
+    from {
+        transform: translateY(-5px);
+        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+    }
+    to {
+        transform: translateY(0);
+        box-shadow: none;
+    }
+    
 }
 
 @media only screen and (min-width: 1280px) {
