--- a/src/styles/appointments.css
+++ b/src/styles/appointments.css
@@ -9,67 +9,102 @@ main {
 }
 
 .appointment-container {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--tertiaryBG);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    align-items: flex-start;
     border-radius: 1rem;
-    width: 80vw;
-    min-width: 550px;
-    margin: 0 auto;
+    gap: 20px;
+    max-width: 800px;
+    margin: auto;
 }
 
 .appointment-feature {
-    display: flex;
+    width: 100%;
+    min-height: 200px;
     padding: 20px;
     background-color: white;
     border-radius: 1rem;
-    margin: 20px;
+    margin: auto;
+    border: 1px solid var(--tertiaryBG);
+    max-width: 300px;
 }
 
-.appointment-feature-details {
-    width: 100%;
+.appointment-feature:hover {
+    animation: raise 0.3s ease forwards;
 }
 
-.appointment-feature-details-table {
-    width: 100%;
-    /* border-collapse: collapse; */
-    /* table-layout: auto; */
+.appointment-feature:not(:hover) {
+    animation: lower 0.3s ease forwards;
 }
 
-.appointment-feature-details-table th:first-child,
-.appointment-feature-details-table td:first-child {
-    width: 15%;
-}
-
-.appointment-feature-details-table th:nth-child(4),
-.appointment-feature-details-table td:nth-child(4) {
-    width: 30%;
-}
-
-.appointment-feature-details-table th,
-.appointment-feature-details-table td {
-    padding: 10px;
-    text-align: center;
+.appointment-feature-details-table tbody th {
+    text-align: right;
+    padding-right: 10px;
 }
 
 .appointment-feature-image {
+    position: relative;
     display: flex;
+    justify-content: right;
     align-items: center;
 }
 
 .appointment-feature-buttons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 20px;
     width: 100%;
 }
 
 .appointment-feature-buttons button {
-    width: 150px;
+    width: 125px;
 }
 
 img.calendar-image {
+    position: absolute;
+    top: 0;
     width: 60px;
     height: auto;
+}
+
+@media (max-width: 768px) {
+    .appointment-feature-details-table tbody td {
+        padding: 5px;
+        font-size: 0.8rem;
+    }
+
+    img.calendar-image {
+        width: 50px;
+        height: auto;
+    }
+
+    .appointment-container {
+        width: 95%;
+        margin: auto;
+    }
+}
+
+@keyframes raise {
+    from {
+        transform: translateY(0);
+        box-shadow: none;
+    }
+    to {
+        transform: translateY(-5px);
+        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+    }
+}
+
+@keyframes lower {
+    from {
+        transform: translateY(-5px);
+        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+    }
+    to {
+        transform: translateY(0);
+        box-shadow: none;
+    }
+    
 }
