Implemented burger menu and other small fixes

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -29,3 +29,13 @@
     margin-top: 20px;
     font-weight: bold;
 }
+
+@media (max-width: 768px) {
+    .about-container {
+        width: 90%;
+    }
+
+    .about-title {
+        text-align: center;
+    }
+}
