--- a/src/styles/appointments.css
+++ b/src/styles/appointments.css
@@ -25,8 +25,15 @@ main {
     background-color: white;
     border-radius: 1rem;
     margin: auto;
-    border: 1px solid var(--tertiaryBG);
+    background-color: var(--cardBG);
     max-width: 300px;
+}
+
+.appointment-feature-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
 }
 
 .appointment-feature:hover {
@@ -40,6 +47,7 @@ main {
 .appointment-feature-details-table tbody th {
     text-align: right;
     padding-right: 10px;
+    color: var(--cardText);
 }
 
 .appointment-feature-image {
@@ -65,7 +73,7 @@ main {
 img.calendar-image {
     position: absolute;
     top: 0;
-    width: 60px;
+    width: 50px;
     height: auto;
 }
 
@@ -92,15 +100,15 @@ img.calendar-image {
         box-shadow: none;
     }
     to {
-        transform: translateY(-5px);
-        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+        transform: translateY(-3px);
+        box-shadow: var(--cardShadow);
     }
 }
 
 @keyframes lower {
     from {
-        transform: translateY(-5px);
-        box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.25);
+        transform: translateY(-3px);
+        box-shadow: var(--cardShadow);
     }
     to {
         transform: translateY(0);
