--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,8 +5,11 @@
   --primaryBG: white;
   --secondaryBG: #9bb4ce;
   --tertiaryBG: #e1e0e0;
+  --cardBG: #f2f2f2;
   --primaryFont: black;
   --secondaryFont: #656464;
+  --cardText: #4a6da7;
+  --cardShadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
   box-sizing: border-box;
 
