--- a/src/styles/pageBanner.css
+++ b/src/styles/pageBanner.css
@@ -14,7 +14,7 @@
 
 @media (max-width: 768px) {
     .banner-box {
-        width: 50%;
+        /* width: 50%; */
         padding: 0 5px 0 5px;
     }
 
