--- a/src/styles/searchBar.css
+++ b/src/styles/searchBar.css
@@ -1,3 +1,7 @@
+.search-container {
+    width: 80vw;
+}
+
 #searchBar {
     border-radius: 30px !important;
     padding: 12px 40px 12px 12px;
@@ -6,6 +10,10 @@
     font-size: 16px;
     background-color: #f0f0f0;
     width: 100%;
+}
+
+@media (max-width: 768px) {
+    
 }
 
 
