--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -9,6 +9,10 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.351);
 }
 
+.general-container > p {
+    text-align: left;
+}
+
 .general-heading {
     color: var(--primaryText);
     font-size: 2rem;
