corrected code to run as anticipated, previous changes made to meet airbnb style was incorrect

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,7 +12,7 @@
 }
 
 .nav-links a {
-    color: white;
+    color: var(--primaryText);
     text-decoration: none;
     padding: 10px;
     transition: 0.3s;
