--- a/src/styles/medicalCentres.css
+++ b/src/styles/medicalCentres.css
@@ -233,7 +233,7 @@
     justify-content: center;
   }
   
-  .btn {
+  .mc-btn {
     padding: 8px 12px;
     border: none;
     border-radius: 4px;
